2005-10-04 Francois Proulx <francois.proulx@gmail.com>
	* Translated some error message in SQL abstraction
	* Cleaned up error messages when starting from scratch
	* Added link to install script, when the database is empty.
	* Fixed initial data dump script
	
2005-10-04 Benoit Grégoire  <bock@step.polymtl.ca>
	* Remove a bunch of deprecated methods from the Node object,
	 document undocumented methods.
	* Make the node id editable.  This allows the gateway "MAC address as node ID"
	 patch by London wireless to be usable with the standard auth server, and to 
	 transition to using MAC address as node ID.
	* Fix a saving problem with all the content types with some versions of PHP
	* Add a new Content type:  IFrameRest.  This allows the result of a REST style query
	returning HTML to be displayed in a HTML iframeset.  Currently supported are 
	substitution of the node_id, the user_id and the last display date in the get query.
	* CVS version of the auth server should now be "reasonnably" safe to use in production, 
	so the 2005-09-01 notice is no longuer in effect.
	
2005-10-04 Francois Proulx <francois.proulx@gmail.com>
	* Translated signup page messages

2005-09-27 Benoit Grégoire  <bock@step.polymtl.ca>
	* Partial login page content manager support (Node only for now)

2005-09-27 Philippe April  <philippe@ilesansfil.org>
	* Guess the best language from what the browser sends,
	otherwise use the default.

2005-09-26 Francois Proulx <francois.proulx@gmail.com>
	* Translated the few new sentences on the login page

2005-09-26 Benoit Grégoire  <bock@step.polymtl.ca>
	* login/index.php, stylesheet.css:  Make the create new account bigger, and remove unnecessary words.

2005-09-26 Francois Proulx <francois.proulx@gmail.com>
	* Completed translations
	
2005-09-26 Francois Proulx <francois.proulx@gmail.com>
	* Fixed annoying bug in new google maps code
	
2005-09-25 Francois Proulx <francois.proulx@gmail.com>