@@ -1,0 +1,43 @@
+<?php
+
+
+/********************************************************************\
+ * This program is free software; you can redistribute it and/or    *
+ * modify it under the terms of the GNU General Public License as   *
+ * published by the Free Software Foundation; either version 2 of   *
+ * the License, or (at your option) any later version.              *
+ *                                                                  *
+ * This program is distributed in the hope that it will be useful,  *
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of   *
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the    *
+ * GNU General Public License for more details.                     *
+ *                                                                  *
+ * You should have received a copy of the GNU General Public License*
+ * along with this program; if not, contact:                        *
+ *                                                                  *
+ * Free Software Foundation           Voice:  +1-617-542-5942       *
+ * 59 Temple Place - Suite 330        Fax:    +1-617-542-2652       *
+ * Boston, MA  02111-1307,  USA       gnu@gnu.org                   *
+ *                                                                  *
+ \********************************************************************/
+/**@file AuthenticatorLocalUserNoSignup.php
+ * @author Copyright (C) 2005 Benoit Grégoire <bock@step.polymtl.ca>,
+ * Technologies Coeus inc.
+ */
+
+require_once BASEPATH.'classes/AuthenticatorLocalUser.php';
+require_once BASEPATH.'classes/User.php';
+
+/** Internal wifidog user database authentication source, with signup disabled */
+class AuthenticatorLocalUserNoSignup extends AuthenticatorLocalUser
+{
+	/**
+	 * The basic AuthenticatorLocalUser allows user signup
+	 */
+	function isRegistrationPermitted()
+	{
+		return false;
+	}
+
+} // End class
+?>
